c/c++: Handle '#pragma GCC target optimize' early [PR48026]

Handle '#pragma GCC optimize' earlier as the __OPTIMIZE__ macro may need
to be defined as well for certain usages. Add additional tests for the
'#pragma GCC target' case with auto-vectorization enabled and multiple
combinations of namespaces and/or class member functions.

This is similar to what was done for `#pramga GCC target` in r14-4967-g8697d3a1dcf327,
to fix the similar issue there.

Add more complete tests for PR c++/41201 after git commit r14-4967-g8697d3a1dcf327.

	PR c++/41201
	PR c++/48026
gcc/c-family/ChangeLog:

	* c-pragma.cc (init_pragma): Use c_register_pragma_with_early_handler
	instead of c_register_pragma for `#pragma GCC optimize`.

gcc/testsuite/ChangeLog:

	* c-c++-common/pragma-optimize-1.c: New test.
	* g++.target/i386/vect-pragma-target-1.C: New test.
	* g++.target/i386/vect-pragma-target-2.C: New test.
	* gcc.target/i386/vect-pragma-target-1.c: New test.
	* gcc.target/i386/vect-pragma-target-2.c: New test.

Signed-off-by: Gwenole Beauchesne <gb.devel@gmail.com>
Co-authored-by: Andrew Pinski <quic_apinski@quicinc.com>